# hullatodo

./: Cargo.toml  README.md
hullatodo_cli/: Cargo.toml  README.md
hullatodo_cli/src/: main.rs
hullatodo_core/: Cargo.toml  README.md
hullatodo_core/docs/: design.md  tasks.todo  todo.txt
hullatodo_core/src/: lib.rs
hullatodo_flutter_ui/: tasks.todo  todo.txt
hullatodo_flutter_ui/docs/: design.md
hullatodo_txt/: Cargo.toml  README.md  tasks.todo  todo.txt
hullatodo_txt/src/: lib.rs  nom_parser.rs  pest_parser.rs  todo.txt.pest
hullatodo_txt/tests/: tests.rs
