[package]
name = "hullatodo_core"
version = "0.1.0"
authors = ["Brian Heylin <brian.github@heylin.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hullatodo_txt]
path = "../hullatodo_txt"

[dependencies.notify]
version = "4.0.12"

[dependencies.lazy_static]
version = "1.4.0"