[package]
name = "hullatodo_txt"
version = "0.1.0"
authors = ["Brian Heylin <brian.github@heylin.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pest]
version = "2.1.3"

[dependencies.pest_derive]
version = "2.1.0"